--- a/src/assets/stylesheet/helpers/_custom-variables.scss
+++ b/src/assets/stylesheet/helpers/_custom-variables.scss
@@ -1,14 +1,18 @@
 /* ===============================
        gray color Variables
  =============================== */
+$gray-100: #fafafa !default;
+$gray-200: #eee !default;
+$gray-300: #cfcfcf !default;
 $gray-500: #646a7c !default;
-$black:    #000;
-$white:    #fff;
+$black: #000;
+$white: #fff;
 
 /* ===============================
        map gray color
  =============================== */
 $grays: (
+  "100": $gray-100,
   "500": $gray-500,
 );
 
@@ -17,8 +21,10 @@ $grays: (
  =============================== */
 $primary: #e30613;
 $warning: #f9ba02;
-$danger:  #e30613;
+$danger: #e30613;
 $success: #36b600;
+$dark-blue: #28314b;
+$light-red: #fef3f2;
 
 /* ===============================
         map theme color
@@ -28,9 +34,14 @@ $theme-colors: (
   warning: $warning,
   danger: $danger,
   success: $success,
-  medium-gray: $gray-500,
+  gray: $gray-500,
   white: $white,
   dark: $black,
+  light: $gray-100,
+  gray-200: $gray-200,
+  gray-300: $gray-300,
+  dark-blue: $dark-blue,
+  light-red: $light-red,
 );
 
 /* ===============================
@@ -38,11 +49,40 @@ $theme-colors: (
  =============================== */
 $body-color: $gray-500;
 
-
 /* ===============================
          Fonts Variables
  =============================== */
- $font-path: "../../fonts";
+$font-path: "../../fonts";
 
 $font-size-base: 1rem; // 16px
-$base-font-family: 'Cairo', sans-serif
+$base-font-family: "Cairo", sans-serif;
+
+/* ===============================
+       Style anchor elements
+ =============================== */
+$link-color: $dark-blue !default;
+$link-decoration: none !default;
+$link-hover-decoration: underline !default;
+
+/* ===============================
+      Border
+ =============================== */
+$border-width: 1px;
+$border-radius: 0.25rem;
+$border-radius-lg: 0.7rem;
+
+$border-base: $border-width solid $gray-500;
+
+/* ===============================
+      Icons
+ =============================== */
+$icon-size-base: 1rem;
+
+$icon-sizes: (
+  1: $icon-size-base,
+  2: $icon-size-base * 1.25,
+  3: $icon-size-base * 1.5,
+  4: $icon-size-base * 1.75,
+  5: $icon-size-base * 2,
+  6: $icon-size-base * 2.5,
+);
