--- a/src/assets/stylesheet/helpers/_helpers-index.scss
+++ b/src/assets/stylesheet/helpers/_helpers-index.scss
@@ -13,9 +13,15 @@
 @import "../../../../node_modules/bootstrap/scss/reboot";
 @import "../../../../node_modules/bootstrap/scss/containers";
 
-
-
 @import "../../../../node_modules/bootstrap/scss/tables";
 @import "../../../../node_modules/bootstrap/scss/buttons";
+@import "../../../../node_modules/bootstrap/scss/dropdown";
+@import "../../../../node_modules/bootstrap/scss/navbar";
+@import "../../../../node_modules/bootstrap/scss/nav";
+@import "../../../../node_modules/bootstrap/scss/transitions";
+@import "../../../../node_modules/bootstrap/scss/forms";
+@import "../../../../node_modules/bootstrap/scss/alert";
 
 @import "../../../../node_modules/bootstrap/scss/utilities/api";
+
+@import "./rtl";
